--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+trabajo/Assets/Editor/Migration/com.ptc.vuforia.engine-10.11.3.tgz.meta
