--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ crashlytics-build.properties
 trabajo/Assets/Editor/Migration/com.ptc.vuforia.engine-10.11.3.tgz.meta
 trabajo/Assets/Editor/Migration/AddVuforiaEnginePackage.cs
 trabajo/Assets/Editor/Migration/AddVuforiaEnginePackage.cs.meta
+trabajo/Assets/Editor/Migration/com.ptc.vuforia.engine-10.11.3.tgz
