--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ trabajo/Assets/Editor/Migration/AddVuforiaEnginePackage.cs
 trabajo/Assets/Editor/Migration/AddVuforiaEnginePackage.cs.meta
 trabajo/Assets/Editor/Migration/com.ptc.vuforia.engine-10.11.3.tgz
 trabajo/Library/PackageCache/com.ptc.vuforia.engine@328aaa4f4faf/Vuforia/Plugins/iOS/VuforiaEngine.framework/VuforiaEngine
+trabajo/Library/ArtifactDB
