--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ trabajo/Assets/Editor/Migration/AddVuforiaEnginePackage.cs.meta
 trabajo/Assets/Editor/Migration/com.ptc.vuforia.engine-10.11.3.tgz
 trabajo/Library/PackageCache/com.ptc.vuforia.engine@328aaa4f4faf/Vuforia/Plugins/iOS/VuforiaEngine.framework/VuforiaEngine
 trabajo/Library/ArtifactDB
+trabajo/Packages/com.ptc.vuforia.engine-10.11.3.tgz
